Fix otp input resend button spacing

--- a/authui/src/authflowv2/components/otp-input.css
+++ b/authui/src/authflowv2/components/otp-input.css
@@ -33,7 +33,7 @@
       --typography-body-medium__font-weight
     );
 
-    --otp-input-resend-button-margin-top: 0.5rem;
+    --otp-input-resend-button-margin-top: 1rem;
   }
 
   .otp-input {
